# CI-CD

./: pyproject.toml
.github/workflows/: ci-cd.yml
testes/: test_jogo.py
