[tool.poetry]
name = "mlops"
version = "0.1.0"
description = ""
authors = ["erick.santos <erick.santos@koin.com.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pygame = "^2.6.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.2"
pylint = "^3.3.6"
mypy = "^1.15.0"
radon = "^6.0.1"
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
